# csi_py

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  api_helpers.py  builder.py  conc_10pisos_materials_20251018_215229.json  conc_10pisos_materials_20251018_215913.json  conc_10pisos_materials_20251019_093731.json  conc_10pisos_materials_20251019_093814.json  conc_10pisos_points_20251018_140940.json  conc_10pisos_walls_20251020_091839.json  constants.py  csi_py.py  extractor.py  extractors.py  handler.py  pyproject.toml  requirements.txt  setup.py  unit_tool.py
.github/workflows/: publish-pypi.yml
docs/: AI_LOOKUP.md  ARQUITECTURA.md  DEVELOPER.md  SPEC.md  USO_API.md  index.md
docs/api/: building.md  connection.md  direct_csi.md  extraction.md  index.md  tabular.md
docs/dev/: backend_flow.md  backend_objects.md
examples/: ejemplo_.py  ejemplo_builder.py  ejemplo_error_cargas.py  example_00_verify_installation.py  example_basic_connection.py  example_build_frame.py  example_build_slab.py  example_extract_data.py
examples/modelos/: edificio_simple.$et  edificio_simple.EDB  edificio_simple.K_0  edificio_simple.K_I  edificio_simple.K_J  edificio_simple.OUT  edificio_simple.Y  edificio_simple.Y$$  edificio_simple.Y00  edificio_simple.Y03  edificio_simple.Y_  edificio_simple.Y_1  edificio_simple.ebk  edificio_simple.msh  ejemplo_2.$et  ejemplo_2.EDB  ejemplo_3.$et  ejemplo_3.EDB.tlog  ejemplo_3.ebk
unit_tool/: __init__.py  config.py  setup.py
