[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csi_py_handler"
version = "0.1.0"
description = "Biblioteca Python para automatizar software CSI (ETABS, SAP2000 y SAFE) con .NET y COM."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "YabarIngenieros" }
]
keywords = [
  "etabs",
  "sap2000",
  "safe",
  "csi",
  "structural-analysis",
  "automation",
  "api",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "pythonnet>=3.0.0",
  "comtypes>=1.1.10",
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
  "black>=21.0",
  "build>=1.2.0",
  "flake8>=3.9",
  "pytest>=6.0",
  "pytest-cov>=2.0",
  "twine>=5.0.0",
]
docs = [
  "sphinx>=4.0",
  "sphinx-rtd-theme>=0.5",
]

[project.urls]
Documentation = "https://github.com/YabarIngenieros/csi_py/blob/main/README.md"
Issues = "https://github.com/YabarIngenieros/csi_py/issues"
Source = "https://github.com/YabarIngenieros/csi_py"

[tool.setuptools]
packages = ["csi_py"]
include-package-data = false
license-files = ["LICENSE"]

[tool.setuptools.package-dir]
csi_py = "."
